# KrakenParser

./: CITATION.cff  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  codecov.yml  convert2csv.py  decombine.sh  kraken2csv.sh  processing_script.py  pyproject.toml  run_kreport2mpa.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  draft-pdf.yml  publish.yml  python-package.yml
krakenparser/: __init__.py  convert2csv.py  decombine.sh  kraken2csv.sh  krakenparser.py  pipeline.py  processing_script.py  run_kreport2mpa.sh  utils.py
krakenparser/counts/: convert2csv.py  processing_script.py  split_mpa.py
krakenparser/kpplot/: __init__.py  base.py  clustermap.py  stackedbar.py  streamgraph.py
krakenparser/mpa/: mpa_table.py  transform2mpa.py
krakenparser/stats/: diversity.py  relabund.py
paper/: paper.bib  paper.md
tests/: conftest.py  test_cli.py  test_full_pipeline.py  test_integration.py  test_kpplot.py  test_units.py
